--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "dotenv": "^16.4.5",
     "next": "14.2.2",
     "react": "^18",
     "react-dom": "^18"
@@ -22,6 +23,8 @@
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "axios": "^1.6.8",
+    "axios-mock-adapter": "^1.22.0",
     "eslint": "^8",
     "eslint-config-next": "14.2.2",
     "eslint-plugin-jest": "^28.2.0",
